--- a/index.html
+++ b/index.html
@@ -4,14 +4,66 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guess The Number</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <h1>Guess The Number</h1>
     <div class="tabs">
-        <button class="tab-btm" onclick="showTab('game')">Guess The Number</button>
-        <button 
+        <button class="tab-btn" onclick="showTab('game')">Guess The Number</button>
+        <button class="tab-btn" onclick="showTab('todo')">To-do</button>
+        <button class="tab-btn" onclick="showTab('calculator')">Calculator</button>
+    </div>
+
+    <div id="calculator" classs="tab-content">
+        <h2>Calculator</h2>
+        <input type="text" id="calc-display" readonly />
+
+        <div class="calc-buttons">
+            <button onclcik="press('7')">7</button>
+            <button onclick="press('8')">8</button>
+            <button onclick="press('9')">9</button>
+            <button onclick="press('/')">/</button>
+
+            <button onclick="press('4')">4</button>
+            <button onclick="press('5')">5</button>
+            <button onclick="press('6')">6</button>
+            <button onclick="press('*')">*</button>
+
+            <button onclick="press('1')">1</button>
+            <button onclick="press('2')">2</button>
+            <button onclick="press('3')">3</button>
+            <button onclick="press('-')">-</button>
+
+
+            <button onclick="press('0')">0</button>
+            <button onclick="press('.')">.</button>
+            <button onclick="calculate()">=</button>
+            <button onclick="press('+')">+</button>
+
+            <button onclick="clearCalc()" class="clear">Clear</button>
+        </div>
     </div>
     
+    <div id="todo" class="tab-content hide">
+        <h2>To-Do List</h2>
+
+        <input type="text" id="taskInput" placeholder="Add a Task.."/>
+        <button id="addTasskBtn">Add</button>
+        <button id="clearAllBtn" class="clear-btn">Clear All</button>
+        <ul id="taskList"></ul>
+    </div>
+
+    <div id="game" class="tab-content hide">
+        <h2>Guess The Number(1-10)</h2>
+
+        <p>Try to guess the number!</p>
+
+        <input type="number" id="guessInput" placeholder="Enter number" />
+        <button onclick="checkGuess()">Guess</button>
+
+        <p id="gameResult"></p>
+    </div>
 
 
     
