--- a/index.html
+++ b/index.html
@@ -9,30 +9,111 @@
 </head>
 <body>
 
-  <div class="box">
-    <h2>🎮 Guess The Number – Levels</h2>
+  <div class="app">
 
-    <!-- LEVEL BUTTONS -->
-    <p>Select Level:</p>
+    <header classs="app-head">
+      <div class="title">
+        <div class="logo">G</div>
 
-    <button id="easy">Easy (1–10)</button>
-    <button id="medium">Medium (1–50)</button>
-    <button id="hard">Hard (1–100)</button>
+       <div>
+        <h1>Guess The Number</h1>
+        <p class="lead"> Levels,Score,Timer,Sounds ,Confetti & Level Unlocks - built with pure Dom</p>
+       </div>
+      </div>
 
-    <p id="currentLevel">Level: Not Selected</p>
+       <div class="controls">
+        <div class="meta">Best: <strong id= "globalBest">-</strong></div>
+        <button id="helpBtn" class="btn"> How to play</button>
+        <button id="themeBtn" class="btn toggle">🌙 </button>
+       </div>
+    </header>
 
-    <!-- GAME INPUT -->
-    <input type="number" id="userInput" placeholder="Enter guess" disabled>
+    <aside class="panel left">
+      <div class="card">
+        <h3 style="margin:0">Select Level</h3>
+        <p class="meta">Unlock levels by completing privious level</p>
+        <div class="levels" id="levelsList">
 
-    <br>
-    <button id="checkBtn" disabled>Check</button>
-    <button id="resetBtn">Reset</button>
-    
-        <p id="message">Please select a level to start.</p>
-</div>
+        </div>
+      </div>
 
+      <div class="card">
+        <h4 style="margin:0">Game Settings</h4>
+        <div style="margin-top: 8px" class="meta">
+          <lable><input type="checkbox" id="userTime" />Use Timer </lable>
+          <lable style="margin-left:8px"> <input type="checkbox" id="useSound" checked>Sound</lable>
+        </div>
+        <p class="meta" style="margin-top:8px">Tip:Timer mode increases challenge & score bonus.</p>
+      </div>
 
-   
+      <div class="card">
+        <h4 style="margine-left:8px">High Scores</h4>
+        <div id="highScores"class="meta" style="margin-top:8ppx; flex-direction:coloumn; align-items:flex-start;">
+
+        </div>
+      </div>
+    </aside>
+
+    <main class="panel game">
+      <div class="card">
+           <div style="display:flex; justify-content:space-between; align-items:center;">
+          <div>
+            <div style="font-size:13px; color:var(--muted)">Level</div>
+            <div id="selectedLevel" class="range">Not selected</div>
+          </div>
+          <div style="text-align:right">
+            <div style="font-size:13px; color:var(--muted)">Attempts</div>
+            <div id="attempts" style="font-weight:800">0</div>
+          </div>
+        </div>
+
+        <div style="margin-top:12px;">
+          <div style="font-size:13px; color:var(--muted)">Pick a number between</div>
+          <div style="margin-top:6px; font-size:20px" id="rangeLabel" class="range">—</div>
+
+          <div class="input-row">
+            <input id="guessInput" type="number" placeholder="Enter guess" disabled />
+            <button id="checkBtn" class="big-btn" disabled>Check</button>
+            <button id="giveUpBtn" class="small">Give Up</button>
+
+             <div class="stats">
+            <div class="stat">
+              <div style="font-size:12px;color:var(--muted)">Score</div>
+              <div id="score" style="font-weight:800">—</div>
+            </div>
+            <div class="stat">
+              <div style="font-size:12px;color:var(--muted)">High Score</div>
+              <div id="highScore" style="font-weight:800">—</div>
+            </div>
+            <div class="stat">
+              <div style="font-size:12px;color:var(--muted)">Time Left</div>
+              <div id="timeLeft" style="font-weight:800">—</div>
+            </div>
+          </div>
+
+          <div class="message" id="message">Select a level to begin</div>
+
+          <div style="margin-top:12px; display:flex; gap:8px;">
+            <button id="newGame" class="btn">New Game</button>
+            <button id="resetProgress" class="btn">Reset Progress</button>
+            <button id="shareBtn" class="btn">Share Score</button>
+
+          </div>
+        </div>
+      </div>
+
+         <div class="card" id="logCard" style="display:none">
+        <h4>Recent Activity</h4>
+        <div id="log" style="font-size:13px;color:var(--muted)"></div>
+      </div>
+
+    </main>
+
+      <div class="confetti" id="confettiCanvas"></div>
+
+    <footer class="note">Made with ❤️ · DOM, Events, localStorage — Perfect for resume</footer>
+  </div>
+
   <script src="script.js"></script>
   
 </body>
